[gd_scene load_steps=2 format=3 uid="uid://w6fhh20qoq77"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_mfq3j"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mfq3j")

[node name="Style" type="Label" parent="."]
offset_left = 5.0
offset_top = 32.0
offset_right = 61.0
offset_bottom = 55.0
text = "Style: 0"

[node name="Mana" type="Node" parent="."]

[node name="ManaLabel" type="Label" parent="Mana"]
offset_right = 40.0
offset_bottom = 23.0
text = "Mana:"

[node name="ManaPoints" type="Label" parent="Mana"]
offset_left = 54.0
offset_top = 3.0
offset_right = 107.0
offset_bottom = 26.0
text = "1000"

[node name="LevelCompleteMsg" type="Label" parent="."]
visible = false
offset_left = 405.0
offset_top = 230.0
offset_right = 913.0
offset_bottom = 299.0
theme_override_font_sizes/font_size = 50
text = "ðŸŽ‰ Level Complete ðŸŽ‰"

[node name="LevelFailedMsg" type="Label" parent="."]
visible = false
offset_left = 405.0
offset_top = 230.0
offset_right = 913.0
offset_bottom = 299.0
theme_override_font_sizes/font_size = 50
text = "ðŸŽ‰ Level Failed ðŸŽ‰"

[node name="Retry" type="Button" parent="."]
visible = false
offset_left = 612.0
offset_top = 318.0
offset_right = 662.0
offset_bottom = 349.0
text = "Retry"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
